# egydata

./: LICENSE  README.md  UploadToGitHub.py  pyproject.toml  pyproject.toml.py  setup.py
.github/workflows/: pypi.yml
egydata/: __init__.py  cities.py  cli.py  governorates.py  phoneAreas.py  timezones.py
