[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egydata"
version = "0.1.0"
description = "Python library created by InnoSoft-Company tech team for Egyptian data: cities, governorates, timezones, phone numbers, etc."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Mohammed Ahmed Ghanam", email = "midoghanam@hotmail.com" }
]
license = { file = "LICENSE" }
keywords = ["egypt", "data", "cities", "governorates", "timezone", "phone numbers"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
]